# marsrover

./: CMakeLists.txt  README.md  rover.txt
include/: common.h  fileio.h  rover.h  terrain.h
src/: fileio.cpp  main.cpp  rover.cpp  terrain.cpp
test/: testing.cpp
